<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Explorer for SkyDrive</string>
    <string name="initializingMessage">Connecting the app to your Windows Live account...</string>
    <string name="firstWelcomeMessage">Welcome to Android Explorer for SkyDrive!\n\nSign in with your
        Windows Live account and access your Microsoft SkyDrive. Easily upload files to your
        SkyDrive and share your files between computers and friends!\n\nSign in with your Windows Live account to get
        started!
    </string>
    <string name="signInToWindowsLive">Sign in to Windows Live</string>
    <string name="mySkyDrive">My SkyDrive</string>
    <string name="automaticSignInError">Could not connect automatically to Windows Live. Please try logging in manually. </string>
    <string name="manualSignInError">Could not connect Windows Live. Please make sure you are connected to the internet and try again. </string>
    <string name="noAccountQuestion">No Live account? Go to live.com and register for 7GB free storage!</string>

    <string name="icon">Icon</string>
    <string name="noItemsInFolder">No files in this folder</string>
    <string name="newFolderTitle">Create a new folder here</string>
    <string name="newFolder">New folder</string>
    <string name="talkingToSkyDriveWait">Talking to SkyDrive...</string>
    <string name="imageDisplayError">Could not show the image</string>
    <string name="copyCutSelectedFiles">Selected files ready to paste</string>
    <string name="imageLoading">Image is loading. Please wait.</string>
    <string name="rootFolderTitle">Home</string>
    <string name="savedFilesTitle">Saved files</string>

    <string name="deletedFiles">Deleted file(s)</string>
    <string name="movedFiles">Moved file(s)</string>
    <string name="copiedFiles">Copied file(s)</string>
    <string name="renamedFiles">Renamed file(s)</string>
    <string name="serviceLabel">Camera AutoUploader for SkyDrive</string>
    <string name="settings">Settings</string>
    <string name="cameraUploadHeader">Camera upload</string>
    <string name="cameraUploadSummary">Upload camera images automatically</string>
    <string name="limitCameraToWifiHeader">Only upload while on WiFi</string>
    <string name="limitCameraToWifiSummary">Use this if you do not have a data plan. Changes require app restart.</string>
    <string name="limitDataToWiFiHeader">Limit all app traffic to WiFi</string>
    <string name="limitDataToWiFiSummary">Use this if you do not have a data plan. Changes require app restart.</string>
    <string name="aboutTheAppHeader">About the app</string>
    <string name="noInternetConnection">No available WiFi connection. To use the app enable mobile data in settings.</string>
    <string name="versionHeader">Version</string>
    <string name="creditsHeader">The makers</string>
    <string name="creditsBody">The app has been developed by William Killerud
        using the Live SDK for Android by Microsoft and the ActionBarSherlock framework by Jake Wharton.
        The app icon is by Tom Emery.</string>

    <string name="fileWillBeDownloaded">The file will be downloaded to your phone</string>
    <string name="ok">OK</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading</string>
    <string name="downloadingFromSkyDrive">Downloading from SkyDrive...</string>
    <string name="fileSaved">File saved</string>
    <string name="downloadError">Something went wrong while downloading. The file was not saved on your phone.</string>
    <string name="fileAlreadySaved">File already saved</string>
    <string name="fileAlreadySavedMessage">That file has already been saved, but it might have changed since last time.
        Download again?
    </string>
    <string name="savedFileCopy"> Copy </string>
    <string name="savedLowerCase">saved</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="skyDrive">SkyDrive</string>

    <string name="downloadNoPreview">No preview available</string>
    <string name="downloadFileCannotBeViewed">Cannot open file for preview. Download instead?</string>
    <string name="openWebBrowser">Open in...</string>

    <string name="createFolder">Create folder</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="description">Description (Optional)</string>
    <string name="renameTitle">Rename files and folders</string>

    <string name="uploadToSkyDrive">Upload to SkyDrive</string>
    <string name="uploadTo">Upload to</string>
    <string name="uploadingToSkyDrive">Uploading to your SkyDrive...</string>
    <string name="uploadError">Something happened while uploading. The file was not saved in your SkyDrive.</string>
    <string name="uploadToThisFolder">Upload here</string>
    <string name="uploadSelected">Upload selected</string>
    <string name="noFilesInFolder">No files in this folder</string>

    <string name="selectedOne">One item selected</string>
    <string name="selectedSeveral">items selected</string>



    <string name="selectAll">Select all</string>
    <string name="selectNone">Select none</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="rename">Rename</string>
    <string name="reload">Refresh</string>
    <string name="download">Download</string>
    <string name="close">Close</string>
    <string name="paste">Paste</string>
    <string name="signOut">Sign out</string>
    <string name="loggedOut">Logged out</string>
    <string name="savedFiles">Saved files</string>

    <string name="deleteConfirmationTitle">Delete files?</string>
    <string name="deleteConfirmationBody">The following files will be deleted: \n\n</string>
    <string name="deleteConfirmationQuestion">Are you sure you want to do this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="appExitConfirmationHeader">Are you sure you want to close?</string>
    <string name="confirmExitHeader">Confirm on app exit</string>
    <string name="confirmExitSummary">Stops you from accidentally closing the app by presenting a confirmation dialog on exit</string>


    <string name="sharedFiles">Shared files</string>
    <string name="sharingLinks">Sharing links</string>
    <string name="sharingLinksSummary">Anyone with these links will be able to see the file</string>
    <string name="sharingGeneratingLinks">Generating sharing links...</string>
    <string name="sharingEnableEditing">Allow file editing</string>

    <string name="buffering">Buffering</string>
    <string name="playing">Playing</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="paused">Paused</string>
    <string name="saved">Saved</string>
    <string name="stop">Stop</string>
    <string name="stopped">Stopped</string>

    <string name="errorFolderCouldNotBeCreated">Something went wrong in creating the folder. Please try again.</string>
    <string name="errorNoApplicationCouldOpenTheFile">No application could open the file</string>
    <string name="errorOpeningAudioFile">Could not open audio file</string>
    <string name="errorDuringLogin">Error during login</string>
    <string name="errorDeletingFile">Error deleting file(s)</string>
    <string name="errorMovingFile">Error moving file(s)</string>
    <string name="errorRenamingFile">Error renaming file(s)</string>
    <string name="errorCopyingFile">Error copying file(s)</string>
    <string name="thirdPartyError"> cannot be uploaded to SkyDrive by third-party apps and has been skipped...</string>
    <string name="errorCouldNotFetchFileForSharing">Could not find the file you shared, sorry!</string>
    <string name="errorTooManyFilesAtOnce">Cannot handle more than 99 files in one go, sorry. Handling as many as I can!</string>
    <string name="errorLoggedOut">You have been logged out and need to log in again to continue using the app</string>


    <string name="audioServiceName">Explorer for SkyDrive Music</string>
    <string name="audioBuffering">Buffering song</string>
    <string name="audioBufferingSummary">Buffering the song from your SkyDrive</string>
    <string name="audioNotPlaying">Not playing</string>
    <string name="audioNotPlayingSummary">No songs in playlist. To play some songs tap them in Android Explorer for SkyDrive.</string>
    <string name="audioPlaying">Playing</string>
    <string name="audioReturnToControls">Tap this notification to open music controls.</string>
    <string name="audioStopped">Stopped</string>
    <string name="audioStarted">Started</string>
    <string name="audioPaused">Paused</string>
    <string name="audioUpNext">Up next</string>
    <string name="audioQueue">Queue</string>
    <string name="audioShuffle">Shuffle</string>
    <string name="audioRepeat">Repeat</string>
    <string name="audioRemove">Remove</string>
    <string name="audioStop">Stop</string>
    <string name="audioPlay">Play</string>
    <string name="audioPause">Pause</string>
    <string name="audioSkip">Skip</string>
    <string name="audioAddedToPlayingQueue">added to playing queue</string>
    <string name="audioTapASong">Tap a song</string>
    <string name="audioTapToAddToQueue">Tap a song to add it to the playing queue</string>
    <string name="audioNothingToSkipTo">No song to skip to</string>
    <string name="audioQueueInstructions">Drag and drop to change the queue. Slide left to remove.</string>


    <string name="disableThumb">Disable thumbnails</string>
    <string name="disableThumbSummary">Conserves memory and bandwidth. Disable thumbnails if you experience crashes.</string>

</resources>
