<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/newFolder"
            android:showAsAction="ifRoom"
            android:title="@string/newFolder"
            android:visible="true"
            android:icon="@drawable/ic_menu_add_folder"
            />
    <item
            android:id="@+id/uploadFile"
            android:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/uploadFile"
            android:visible="false"
            />
    <item
            android:id="@+id/reload"
            android:showAsAction="ifRoom"
            android:icon="@drawable/ic_menu_refresh"
            android:title="@string/reload"
            android:visible="true"
            />

    <item android:id="@+id/download"
          android:showAsAction="ifRoom"
          android:title="@string/download"
          android:icon="@android:drawable/ic_menu_save"
          android:visible="false"
            />

    <item android:id="@+id/rename"
          android:icon="@android:drawable/ic_menu_edit"
          android:title="@string/rename"
          android:showAsAction="ifRoom"
          android:visible="false"
          />
    <item android:id="@+id/copy"
          android:icon="@drawable/ic_menu_copy_holo_light"
          android:title="@string/copy"
          android:showAsAction="ifRoom"
          android:visible="false"
            />
    <item android:id="@+id/cut"
          android:icon="@drawable/ic_menu_cut_holo_light"
          android:title="@string/cut"
          android:showAsAction="ifRoom"
          android:visible="false"
            />
    <item android:id="@+id/paste"
          android:showAsAction="ifRoom"
          android:title="@string/paste"
          android:icon="@drawable/ic_menu_set_as"
          android:visible="false"
          />
    <item android:id="@+id/delete"
          android:showAsAction="ifRoom"
          android:icon="@android:drawable/ic_menu_delete"
          android:title="@string/delete"
          android:visible="false" />

</menu>