<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        android:orientation="vertical">

    <TextView android:id="@+id/sharingLinksTitle"
              android:text="@string/sharingLinks"
              android:layout_height="wrap_content"
              android:textSize="20sp"
              android:layout_width="fill_parent" />

    <TextView android:id="@+id/sharingLinksSummary"
              android:text="@string/sharingLinksSummary"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent" />

    <EditText android:text="@string/sharingGeneratingLinks"
              android:id="@+id/sharingLinks"
              android:gravity="top"
              android:lines="5"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent" />

    <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/cancel"/>
        <Button
                android:id="@+id/shareButton"
                android:text="@string/share"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />

    </LinearLayout>


</LinearLayout>