<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="8dip">


    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:id="@+id/introTextView"
              android:text="@string/firstWelcomeMessage"
              android:layout_marginBottom="20dip"/>

    <Button android:id="@+id/signInButton"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/signInToWindowsLive"/>

    <TextView android:layout_width="fill_parent"
              android:id="@+id/noAccountText"
              android:layout_height="wrap_content"
              android:text="@string/noAccountQuestion"
              android:layout_marginBottom="20dip"/>
</LinearLayout>

