<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<ListView
	    android:id="@id/android:list"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:drawSelectorOnTop="false">
	</ListView>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            android:id="@+id/uploadButtonLayout">

        <Button android:id="@+id/uploadSelectAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectAll"
                android:layout_weight="1" />
        <Button android:id="@+id/uploadSelectNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selectNone"/>
    </LinearLayout>

    <Button android:id="@+id/uploadSelected"
            android:text="@string/uploadSelected"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
    </Button>

	<TextView
	    android:id="@id/android:empty"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:text="@string/noItems" />

</LinearLayout>